--- a/.github/workflows/6main.yml
+++ b/.github/workflows/6main.yml
@@ -1,30 +1,86 @@
-name: Build OTX Server  
-on: [push, pull_request]  
+name: 🏗️ Build OTX Server  
+on:   
+  push:  
+    branches: [ main, develop ]  
+  pull_request:  
+    branches: [ main ]  
   
 jobs:  
   build:  
+    name: 🔨 Build & Package  
     runs-on: windows-latest  
+    strategy:  
+      matrix:  
+        configuration: [Release]  
+        platform: [x64]  
+      
     steps:  
-      - uses: actions/checkout@v4  
-        
-      - name: Install Boost via Chocolatey  
+      - name: 📥 Checkout Repository  
+        uses: actions/checkout@v4  
+          
+      - name: 💾 Cache Boost Libraries  
+        uses: actions/cache@v4  
+        id: cache-boost  
+        with:  
+          path: |  
+            C:\ProgramData\chocolatey\lib\boost-msvc-14.3  
+            C:\local\boost_1_84_0  
+          key: boost-1.84.0-msvc-14.3-choco-${{ runner.os }}  
+            
+      - name: 🍫 Install Boost via Chocolatey  
+        if: steps.cache-boost.outputs.cache-hit != 'true'  
         run: |  
+          Write-Host "🔽 Instalando Boost 1.84.0..."  
           choco install boost-msvc-14.3 --version=1.84.0 -y  
-          # Criar link simbólico para o caminho esperado pelo projeto  
+            
+          Write-Host "📁 Criando estrutura de diretórios..."  
           if (!(Test-Path "C:\local")) { New-Item -ItemType Directory -Path "C:\local" }  
           if (!(Test-Path "C:\local\boost_1_84_0")) {  
             New-Item -ItemType SymbolicLink -Path "C:\local\boost_1_84_0" -Target "C:\ProgramData\chocolatey\lib\boost-msvc-14.3\tools"  
           }  
+          Write-Host "✅ Boost instalado com sucesso!"  
         shell: powershell  
           
-      - name: Setup MSBuild  
+      - name: 🔍 Verify Build Environment  
+        run: |  
+          Write-Host "🔧 === Build Environment Check ==="  
+          Write-Host "📦 Boost Path: $(if (Test-Path 'C:\local\boost_1_84_0') { '✅ OK' } else { '❌ MISSING' })"  
+          Write-Host "📚 Boost Libs: $(if (Test-Path 'C:\local\boost_1_84_0\lib64-msvc-14.3') { '✅ OK' } else { '❌ MISSING' })"  
+          Write-Host "🛠️ MSBuild Version:"  
+          msbuild -version  
+          Write-Host "✨ Environment ready!"  
+        shell: powershell  
+          
+      - name: ⚙️ Setup MSBuild  
         uses: microsoft/setup-msbuild@v2  
           
-      - name: Build  
-        run: msbuild sources/msvc/TheOTXServer.vcxproj /p:Configuration=Release /p:Platform=x64 /m  
+      - name: 🚀 Build OTX Server  
+        run: |  
+          Write-Host "🔨 Iniciando compilação do OTX Server..."  
+          msbuild sources/msvc/TheOTXServer.vcxproj `  
+            /p:Configuration=${{ matrix.configuration }} `  
+            /p:Platform=${{ matrix.platform }} `  
+            /m `  
+            /v:minimal `  
+            /p:WarningLevel=1  
+          Write-Host "🎉 Compilação concluída com sucesso!"  
+        shell: powershell  
           
-      - name: Upload Artifact  
+      - name: 📦 Upload Build Artifacts  
         uses: actions/upload-artifact@v4  
         with:  
-          name: TheOTXServer  
-          path: sources/msvc/x64/Release/TheOTXServer.exe
+          name: 🎯 TheOTXServer-${{ matrix.configuration }}-${{ matrix.platform }}  
+          path: |  
+            sources/msvc/x64/Release/TheOTXServer.exe  
+            sources/msvc/x64/Release/TheOTXServer.pdb  
+          retention-days: 30  
+  
+      - name: 📊 Build Summary  
+        if: success()  
+        run: |  
+          Write-Host "🎊 === BUILD SUCCESSFUL ==="  
+          Write-Host "📁 Artifact: TheOTXServer-${{ matrix.configuration }}-${{ matrix.platform }}"  
+          Write-Host "💾 Size: $((Get-Item 'sources/msvc/x64/Release/TheOTXServer.exe').Length / 1MB) MB"  
+          Write-Host "🕒 Build completed at: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')"  
+          Write-Host "✨ Ready for deployment!"  
+        shell: powershell
